# 6.824

./: Cargo.toml  devtool.sh
main/: Cargo.toml
main/src/: mrsequential.rs  mrworker.rs
mrapps/: Cargo.toml
mrapps/index/: Cargo.toml
mrapps/wc/: Cargo.toml
