[package]
name = "main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mrmaster"
path = "src/mrmaster.rs"

[[bin]]
name = "mrworker"
path = "src/mrworker.rs"

[[bin]]
name = "mrsequential"
path = "src/mrsequential.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mr = { path = "../mr" }

